--- a/liquidwar6/doc/map-hints-selfdoc.texi
+++ b/liquidwar6/doc/map-hints-selfdoc.texi
@@ -43,6 +43,22 @@ for instance. Downsizing causes fighters to be bigger because map resolution
 is lower. This can be usefull if you don't want fighters to be too small.
 @end deffn
 
+@subsection exp
+@deffn {Command-line option} @code{--exp=<value>}
+@deffnx {Environment variable} @code{LW6_EXP}
+@deffnx {XML key} @code{exp}
+Type: float
+
+Default value: 0
+Min value: 0
+Max value: 99
+
+Level of experience (AKA exp) required to play the current level. If this
+level is validated (that is, won) then player will be granted with a level of
+exp+1 and be able to play all the next levels. An exp of 0 means the level is
+playable by a pure beginner.
+@end deffn
+
 @subsection fighter-scale
 @deffn {Command-line option} @code{--fighter-scale=<value>}
 @deffnx {Environment variable} @code{LW6_FIGHTER_SCALE}
@@ -318,7 +334,7 @@ Default value: 0
 Min value: -5
 Max value: 5
 
-This parameter allows you to make walls (aka map foreground) thicker, or
+This parameter allows you to make walls (AKA map foreground) thicker, or
 thiner, when map is loaded. Indeed, when map are resampled, and especially
 when they are downscaled, some walls may disappear, or some passages may be
 blocked. The loader can't automatically figure out wether it's more important
