Added rectangled, pxl, dog by Kasper Hviid.

--- a/liquidwar6-extra-maps/ChangeLog
+++ b/liquidwar6-extra-maps/ChangeLog
@@ -1,3 +1,7 @@
+2011-08-16 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added rectangled, pxl, dog by Kasper Hviid.
+
 2011-07-30 : Christian Mauduit <ufoot@ufoot.org>
 
 	* 0.0.10beta -> 0.0.11beta.
