mod-csound now disabled by default

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2011-08-16 : Christian Mauduit <ufoot@ufoot.org>
 
+	* mod-csound now disabled by default.
+
 	* Exp support (read-only for now).
 
 2011-08-12 : Christian Mauduit <ufoot@ufoot.org>
