--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -3090,6 +3090,10 @@ absolutely no leak on all the core sub-libraries, eg running
 Bits of code which depend on other libraries are a different story, for
 some projects on which Liquid War 6 depends might, for some reason, raise
 warnings. But as far as Liquid War 6 is concerned, the goal is simple: zero leak.
+@item
+Liquid War 6 is referenced on @uref{http://www.ohloh.net/, ohloh}. 
+Visit @uref{http://www.ohloh.net/p/liquidwar6} 
+to get time-based statistics and facts about the source code.
 @end itemize
 
 Those tools certainly don't garantee the code is perfect, but they do help
