Wave effect is back! Serious perf issues, but works.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2011-08-20 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Wave effect is back! Serious perf issues, but works.
+
 	* Fixed polarity issues on zoom in/out (should help on scroll)
 
 2011-08-19 : Christian Mauduit <ufoot@ufoot.org>
