--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-08-21 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed OpenGL context errors.
+
 2011-08-20 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Trying to optimize OpenGL calls.
